# ivy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
client/: CMakeLists.txt
client/src/: client.cpp
server/: CMakeLists.txt
server/src/: CMakeLists.txt  ivygraphicsview.cpp  ivymainwindow.cpp  ivymainwindow.h  ivyservice.cpp  ivyservice.h  server.cpp  style.css
server/src/resources/: server.qrc
src/: ivy.cpp  ivygraphicsview.h  ivymainwindow.cpp  ivymainwindow.h  ivyscrollarea.cpp  ivyscrollarea.h  ivyservice.cpp  ivyservice.h  style.css
